--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A card matching memory game based on Seterra",
   "main": "main.js",
   "scripts": {
-    "test": "electron ."
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
