Displays current decks, started game window

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/brettkolodny/Taliiz-Memory-Game#readme",
   "devDependencies": {
     "electron": "^3.0.7"
+  },
+  "dependencies": {
+    "detect-file-type": "^0.2.0"
   }
 }
