--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "electron": "^3.0.7"
   },
   "dependencies": {
-    "detect-file-type": "^0.2.0"
+    "detect-file-type": "^0.2.0",
+    "file-type": "^10.4.0",
+    "read-chunk": "^3.0.0"
   }
 }
